dataclients/kubernetes/testdata/ingressV1/traffic/1-2-3-4.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: namespace1
  name: ingress1
  annotations:
    zalando.org/backend-weights: '{"service1v1": 1, "service1v2": 2, "service1v3": 3, "service1v4": 4}'
spec:
  defaultBackend:
    service:
      name: service1v1
      port:
        name: port1
  rules:
    - host: test.example.org
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: service1v1
                port:
                  name: port1
          - pathType: ImplementationSpecific
            backend:
              service:
                name: service1v2
                port:
                  name: port1
          - pathType: ImplementationSpecific
            backend:
              service:
                name: service1v3
                port:
                  name: port1
          - pathType: ImplementationSpecific
            backend:
              service:
                name: service1v4
                port:
                  name: port1
---
apiVersion: v1
kind: Service
metadata:
  namespace: namespace1
  name: service1v1
spec:
  clusterIP: 1.2.3.4
  ports:
    - name: port1
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  namespace: namespace1
  name: service1v2
spec:
  clusterIP: 1.2.3.5
  ports:
    - name: port1
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  namespace: namespace1
  name: service1v3
spec:
  clusterIP: 1.2.3.6
  ports:
    - name: port1
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  namespace: namespace1
  name: service1v4
spec:
  clusterIP: 1.2.3.7
  ports:
    - name: port1
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: namespace1
  name: service1v1
subsets:
  - addresses:
      - ip: 42.0.1.2
      - ip: 42.0.1.3
    ports:
      - name: port1
        port: 8080
        protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: namespace1
  name: service1v2
subsets:
  - addresses:
      - ip: 42.0.1.4
      - ip: 42.0.1.5
    ports:
      - name: port1
        port: 8080
        protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: namespace1
  name: service1v3
subsets:
  - addresses:
      - ip: 42.0.1.6
      - ip: 42.0.1.7
    ports:
      - name: port1
        port: 8080
        protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: namespace1
  name: service1v4
subsets:
  - addresses:
      - ip: 42.0.1.8
      - ip: 42.0.1.9
    ports:
      - name: port1
        port: 8080
        protocol: TCP
